openshift/kogito-sw-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kogito-sw-backend
  labels:
    app: kogito-sw-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kogito-sw-backend
  template:
    metadata:
      labels:
        app: kogito-sw-backend
    spec:
      serviceAccountName: kogito-sw-backend
      containers:
        - name: kogito-sw-backend
          image: quay.io/m88i/kogito-sw-backend:latest
          command:
            - kogito-sw-backend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /live
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 9000
              initialDelaySeconds: 3
              periodSeconds: 3
---
kind: Service
apiVersion: v1
metadata:
  name: kogito-sw-backend
  labels:
    app: kogito-sw-backend
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: kogito-sw-backend
  type: ClusterIP
  sessionAffinity: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kogito-sw-backend
  labels:
    app: kogito-sw-backend
spec:
  to:
    kind: Service
    name: kogito-sw-backend
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
